# cmake-packaging-test

./: build.sh
cmake/: InstallHelper.cmake
exec/: CMakeLists.txt  exe.cpp
liba/: CMakeLists.txt  a.cpp
liba/cmake/: ProjAConfig.cmake
liba/include/ProjA/: a.h
libb/: CMakeLists.txt  b.cpp
libb/cmake/: ProjBConfig.cmake
libb/include/ProjB/: b.h
